// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.DraggableItem checkGrammar=false 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem checkGrammar=true 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem checkHighlight=false 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem checkHighlight=true 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem checkSpaces=false 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem checkSpaces=true 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem className="my-classname" 1`] = `
<div
  className="uu5-bricks-draggable-item my-classname"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem className="test-classname" 1`] = `
<div
  className="uu5-bricks-draggable-item test-classname"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem content="This is Content from ContentMixin" 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    content="This is Content from ContentMixin"
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem content=12345 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    content={12345}
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem controlled=false 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem controlled=true 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem default props 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem disabled=false 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem disabled=false 3`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem disabled=true 1`] = `
<div
  className="uu5-bricks-draggable-item uu5-common-disabled"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem disabled=true 3`] = `
<div
  className="uu5-bricks-draggable-item uu5-common-disabled"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem docKit example UU5.Bricks.DraggableItem example 01 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID1"
  style={Object {}}
  title={null}
>
  <Draggable
    className="wrapper"
    id="uuID2"
    key="uuID2"
  >
    <DraggableItem
      className="item"
      id="uuID3"
      onMove={[Function]}
      onMoveEnd={[Function]}
      onMoveStart={[Function]}
    />
  </Draggable>
</div>
`;

exports[`UU5.Bricks.DraggableItem dynamic=false 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem dynamic=true 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem fullTextSearchPriority=0 1`] = `
<div
  className="uu5-bricks-draggable-item uu-fulltextsearch-0"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem fullTextSearchPriority=0 2`] = `
<div
  className="uu5-bricks-draggable-item uu-fulltextsearch-0"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem hidden=false 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem hidden=false 3`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem hidden=true 1`] = `
<div
  className="uu5-bricks-draggable-item uu5-common-hidden"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem hidden=true 3`] = `
<div
  className="uu5-bricks-draggable-item uu5-common-hidden"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem id="myId" 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="myId"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem id="test-id" 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="test-id"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem ignoreHTML=false 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem ignoreHTML=true 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem mainAttrs=undefined 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem name="myName" 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  name="myName"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem nestingLevel="bigBox" 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem nestingLevel="bigBoxCollection" 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem nestingLevel="box" 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem nestingLevel="box" 3`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem nestingLevel="boxCollection" 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem nestingLevel="inline" 1`] = `""`;

exports[`UU5.Bricks.DraggableItem nestingLevel="inline" 3`] = `""`;

exports[`UU5.Bricks.DraggableItem nestingLevel="page" 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem nestingLevel="smallBox" 1`] = `""`;

exports[`UU5.Bricks.DraggableItem nestingLevel="smallBoxCollection" 1`] = `""`;

exports[`UU5.Bricks.DraggableItem nestingLevel="spa" 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem noPrint=false 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem noPrint=true 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem props.function UU5.Bricks.DraggableItem onMove() 1`] = `
<Draggable
  className="wrapper"
  id="uuID01"
>
  <DraggableItem
    className="item"
    id="uuID02"
    onMove={[Function]}
    onMoveEnd={[Function]}
    onMoveStart={[Function]}
  />
</Draggable>
`;

exports[`UU5.Bricks.DraggableItem props.function UU5.Bricks.DraggableItem onMove() 2`] = `
<Draggable
  className="wrapper"
  id="uuID01"
>
  <DraggableItem
    className="item"
    id="uuID02"
    onMove={[Function]}
    onMoveEnd={[Function]}
    onMoveStart={[Function]}
  />
</Draggable>
`;

exports[`UU5.Bricks.DraggableItem props.function UU5.Bricks.DraggableItem onMoveEnd() 1`] = `
<Draggable
  className="wrapper"
  id="uuID01"
>
  <DraggableItem
    className="item"
    id="uuID02"
    onMove={[Function]}
    onMoveEnd={[Function]}
    onMoveStart={[Function]}
  />
</Draggable>
`;

exports[`UU5.Bricks.DraggableItem props.function UU5.Bricks.DraggableItem onMoveEnd() 2`] = `
<Draggable
  className="wrapper"
  id="uuID01"
>
  <DraggableItem
    className="item"
    id="uuID02"
    onMove={[Function]}
    onMoveEnd={[Function]}
    onMoveStart={[Function]}
  />
</Draggable>
`;

exports[`UU5.Bricks.DraggableItem props.function UU5.Bricks.DraggableItem onMoveStart() 1`] = `
<Draggable
  className="wrapper"
  id="uuID01"
>
  <DraggableItem
    className="item"
    id="uuID02"
    onMove={[Function]}
    onMoveEnd={[Function]}
    onMoveStart={[Function]}
  />
</Draggable>
`;

exports[`UU5.Bricks.DraggableItem props.function UU5.Bricks.DraggableItem onMoveStart() 2`] = `
<Draggable
  className="wrapper"
  id="uuID01"
>
  <DraggableItem
    className="item"
    id="uuID02"
    onMove={[Function]}
    onMoveEnd={[Function]}
    onMoveStart={[Function]}
  />
</Draggable>
`;

exports[`UU5.Bricks.DraggableItem pureRender=false 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem pureRender=true 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem selected=false 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem selected=true 1`] = `
<div
  className="uu5-bricks-draggable-item uu5-common-selected"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem style="padding:8px; borderRadius: 2px" 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem style={"backgroundColor":"red","color":"blue"} 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem style={"margin":8} 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem textCorrector=false 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem textCorrector=true 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem tooltip="My Tooltip" 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title="My Tooltip"
>
  <Div
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem x=50 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 50,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem y=70 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 70,
    }
  }
  title={null}
>
  <Div
    pureRender={true}
  />
</div>
`;
